# corporate-bankruptcy-ml

./: .gitignore  README.md  pixi.toml  pyproject.toml  pytask.py
docs/: project_study_guide.md
outputs/tables/: logistic_model_specification.csv  validation_classification_reports.csv  validation_model_comparison.csv  validation_predictions.csv
reports/oral_exam/: oral_exam_notes.md
reports/paper/: final_paper_outline.md
src/bankruptcy_ml/: __init__.py  baselines.py  config.py  data_validation.py  eda.py  evaluation.py  features.py  final_evaluation.py  interpretation.py  logistic_models.py  pca_extension.py  preprocessing.py  splitting.py  thresholds.py  tree_models.py  visualization.py
tasks/: __init__.py  task_data_validation.py  task_eda.py  task_evaluation.py  task_final_evaluation.py  task_interpretation.py  task_modeling.py  task_pca_extension.py  task_preprocessing.py  task_thresholds.py
tests/: test_baselines.py  test_eda.py  test_evaluation.py  test_final_evaluation.py  test_interpretation.py  test_pca_extension.py  test_preprocessing.py  test_splitting.py  test_thresholds.py  test_tree_models.py  test_visualization.py
